# app/Models/Drone.php
@@ -15,28 +15,27 @@ use OpenApi\Annotations as OA;
  * @author  Peter <peter.422023020@civitas.ukrida.ac.id>
  * 
  * @OA\Schema(
- *     description="Book model",
- *     title="Book model",
+ *     description="Drone model",
+ *     title="Drone model",
  *     required={"title", "author"},
  *     @OA\Xml(
- *         name="Book"
+ *         name="Drone"
  *     )
  * )
  */
 
 
-class Book extends Model
+class Drone extends Model
 {
     // use HasFactory;
     use SoftDeletes;
-    protected $table = 'books';
+    protected $table = 'drones';
     protected $fillable = [
-        'title',
-        'author',
-        'publisher',
-        'publication_year',
+        'id',
         'cover',
-        'description',
+        'drone_name',
+        'producer',
+        'production_year',
         'price',
         'created_at',
         'created_by',
